@@ -1,20 +1,18 @@
 package uk.gov.hmcts.opal.repository.jpa;
 
+import jakarta.persistence.metamodel.SingularAttribute;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 import org.springframework.data.jpa.domain.Specification;
 import uk.gov.hmcts.opal.dto.search.AddressSearch;
 import uk.gov.hmcts.opal.entity.AddressEntity;
 import uk.gov.hmcts.opal.entity.AddressEntity_;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
 public abstract class AddressSpecs<E extends AddressEntity> extends EntitySpecs<E> {
 
-    @SuppressWarnings("unchecked")
     public List<Optional<Specification<E>>> findByAddressCriteria(AddressSearch criteria) {
-        return new ArrayList(Arrays.asList(
+        return new ArrayList<>(List.of(
             notBlank(criteria.getName()).map(this::likeName),
             notBlank(criteria.getAddressLine()).map(this::likeAnyAddressLine),
             notBlank(criteria.getPostcode()).map(this::likePostcode)
@@ -28,24 +26,26 @@ public abstract class AddressSpecs<E extends AddressEntity> extends EntitySpecs<
     public Specification<E> likeAnyAddressLine(String addressLine) {
         String addressLinePattern = "%" + addressLine.toLowerCase() + "%";
         return Specification.anyOf(
-            likeAddressLine1(addressLinePattern),
-            likeAddressLine2(addressLinePattern),
-            likeAddressLine3(addressLinePattern));
+            addressLine1Like(addressLinePattern),
+            addressLine2Like(addressLinePattern),
+            addressLine3Like(addressLinePattern));
     }
 
-    private Specification<E> likeAddressLine1(String addressLinePattern) {
-        return (root, query, builder) ->
-            likeLowerCaseBothPredicate(root.get(AddressEntity_.addressLine1), builder, addressLinePattern);
+    public Specification<E> addressLine1Like(String addressLinePattern) {
+        return addressLineLike(AddressEntity_.addressLine1, addressLinePattern);
     }
 
-    private Specification<E> likeAddressLine2(String addressLinePattern) {
-        return (root, query, builder) ->
-            likeLowerCaseBothPredicate(root.get(AddressEntity_.addressLine2), builder, addressLinePattern);
+    public Specification<E> addressLine2Like(String addressLinePattern) {
+        return addressLineLike(AddressEntity_.addressLine2, addressLinePattern);
     }
 
-    private Specification<E> likeAddressLine3(String addressLinePattern) {
+    public Specification<E> addressLine3Like(String addressLinePattern) {
+        return addressLineLike(AddressEntity_.addressLine3, addressLinePattern);
+    }
+
+    public Specification<E> addressLineLike(SingularAttribute<? super E, String> attribute, String addressLinePattern) {
         return (root, query, builder) ->
-            likeLowerCaseBothPredicate(root.get(AddressEntity_.addressLine3), builder, addressLinePattern);
+            likeLowerCaseBothPredicate(root.get(attribute), builder, addressLinePattern);
     }
 
     public Specification<E> likePostcode(String postcode) {
